--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -2,7 +2,7 @@
 
 <nav class="navbar">
   <div class="logo">
-    <a routerLink="/">ROOMIFY</a>
+    <a routerLink="/home">ROOMIFY</a>
   </div>
 
   <div class="nav-icons">
@@ -18,7 +18,7 @@
 
     <div class="profile-dropdown">
       <button class="profile-btn">
-        <img src="/assets/jojo.jpg" alt="Profile" class="profile-img">
+        <img src="/assets/avatar.png" alt="Profile" class="profile-img">
       </button>
 
       <ul class="dropdown-menu">
