--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
 </head>
 <body>
-  
+
  <div class="background-container">
     <div class="animated-ball big-ball"></div>
     <div class="animated-ball small-ball"></div>
@@ -37,7 +37,7 @@
         <!-- صورة البروفايل -->
         <div class="profile-dropdown">
             <button class="profile-btn">
-                <img src="/assets/jojo.jpg" alt="Profile" class="profile-img">
+                <img src="/assets/avatar.png" alt="Profile" class="profile-img">
             </button>
 
             <!-- القائمة المنسدلة -->
@@ -61,7 +61,7 @@
       <img [src]="post.imagePath" alt="Room">
     </a>
     <span class="description-text">{{ post.description }}</span>
-    <img src="/assets/jojo.jpg" alt="User" class="user-icon">
+    <img src="/assets/avatar.png" alt="User" class="user-icon">
   </div>
 </div>
 
