--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -54,17 +54,14 @@
     </div>
 </nav>
 
-<!-- شبكة الصور -->
 <div class="gallery">
   <div class="image-card" *ngFor="let post of posts">
-    <a [routerLink]="['/comment']">
-      <img [src]="post.imagePath" alt="Room">
+    <a [routerLink]="['/comment', post.id]"> <img [src]="post.imagePath" alt="Room">
     </a>
     <span class="description-text">{{ post.description }}</span>
     <img src="/assets/avatar.png" alt="User" class="user-icon">
   </div>
 </div>
-
 
 
 </body>
