--- a/src/app/comment/comment.component.html
+++ b/src/app/comment/comment.component.html
@@ -1,6 +1,7 @@
 <div class="container py-4">
   <div class="row">
-    <div class="col-md-8 offset-md-2"> <button class="back-button" (click)="goBack()">
+    <div class="col-md-8 offset-md-2">
+      <button class="back-button" (click)="goBack()">
         <i class="bi bi-arrow-left"></i>
         العودة
       </button>
@@ -11,9 +12,27 @@
       <div id="comments-section">
         <div class="d-flex align-items-center mb-3 comment-item" *ngFor="let comment of comments">
           <img [src]="comment.userProfilePicture || '/assets/jojo.jpg'" class="user-img" alt="User" />
-          <div>
+          <div class="comment-content-wrapper flex-grow-1">
             <strong>{{ comment.userName }}</strong>
-            <p class="mb-0">{{ comment.content }}</p>
+            <ng-container *ngIf="comment.isEditing; else viewMode">
+              <textarea class="form-control comment-edit-input" [(ngModel)]="comment.content"></textarea>
+              <div class="d-flex mt-2 justify-content-end">
+                <button class="btn btn-sm btn-success me-2" (click)="saveEditedComment(comment)">حفظ</button>
+                <button class="btn btn-sm btn-secondary" (click)="cancelEdit(comment)">إلغاء</button>
+              </div>
+            </ng-container>
+            <ng-template #viewMode>
+              <p class="mb-0">{{ comment.content }}</p>
+            </ng-template>
+          </div>
+
+          <div class="comment-actions" *ngIf="comment.userId === currentUser.id && !comment.isEditing">
+            <button class="btn btn-sm btn-edit me-2" (click)="editComment(comment)">
+              <i class="bi bi-pencil"></i>
+            </button>
+            <button class="btn btn-sm btn-delete" (click)="deleteComment(comment.id)">
+              <i class="bi bi-trash"></i>
+            </button>
           </div>
         </div>
 
@@ -29,6 +48,5 @@
         <button class="send-btn" (click)="addComment()"><i class="bi bi-send"></i></button>
       </div>
     </div>
-
-    </div>
+  </div>
 </div>
